A few small missed things

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <div class="error-loading">! Error while retrieving data</div>
+    <div class="error-loading" style="display: none;">! Error while retrieving data</div>
     <div id="wrapper">
       <div id="mainVideo">
         <div class="mainvideo-inner">
