Update for Swiper 9, remove jQuery (#1)
* Tidy up Readme, remove assets no longer required

* Update JS for Swiper 9, no jQuery

* A few small missed things

* Slide spacing

--- a/index.html
+++ b/index.html
@@ -1,40 +1,53 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>YouTube Videos Gallery `rc-youtube-playlist`</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" type="text/css" href="style/app.css" />
+  </head>
 
-<head>
-    <title></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-    <link rel="stylesheet" type="text/css" href="style/swiper.min.css">
-    <link rel="stylesheet" type="text/css" href="style/app.css">
-    <script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
-</head>
-
-<body>
-<div class="error-loading">
-	! Error while retrieving data
-</div>
+  <body>
+    <div class="error-loading" style="display: none;">! Error while retrieving data</div>
     <div id="wrapper">
-        <div id="mainVideo">
-            <div class="mainvideo-inner">
-                <div class="main-frame">
-                    <iframe id="mvFrame" width="853" height="480" src="" frameborder="0" allowfullscreen></iframe>
-                </div>
-            </div>
+      <div id="mainVideo">
+        <div class="mainvideo-inner">
+          <div class="main-frame">
+            <iframe
+              id="mvFrame"
+              width="853"
+              height="480"
+              src=""
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
+          </div>
         </div>
-        <div class="video-list">
-            <div class="swiper-container">
-                <div class="swiper-wrapper" id="videoWrap">
-                </div>
-                <div class="swiper-pagination"></div>
-                <div class="swiper-button-prev"></div>
-        		<div class="swiper-button-next"></div>
-            </div>
+      </div>
+      <div class="video-list">
+        <div class="swiper-container">
+          <div class="swiper-wrapper" id="videoWrap"></div>
+          <div class="swiper-pagination"></div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
         </div>
+      </div>
     </div>
 
-    <script type="text/javascript" src="js/swiper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
-</body>
-
+  </body>
 </html>
-<!-- error msg -->
